# secure-blockchain-financial-txn-system

./: .gitignore  LICENSE  README.md  SECURITY.md  experiment.ipynb  graph.html  hardhat.config.js  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  verify_setup.py
.github/workflows/: ci.yml
api/routes/: chain.py  tamper.py
blockchain/: __init__.py  contract.py
contracts/: TransactionContract.sol
scripts/: deploy.js
tests/: __init__.py  conftest.py  test_address_loader.py  test_consensus.py  test_contract.py  test_key_manager.py  test_signer.py
wallet/: __init__.py  address_loader.py  config.py  exceptions.py  key_manager.py  signer.py
